--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "kavall-delivery",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "dev": "node --watch -r ts-node/register src/index.ts"
   },
   "keywords": [],
